fixed spacing of dropZone letters

--- a/packages/app/src/pages/Stories/Stories.scss
+++ b/packages/app/src/pages/Stories/Stories.scss
@@ -35,6 +35,10 @@
   }
 }
 
+.drop-target {
+  margin: 5px;
+}
+
 .rotated-letter {
   transform: rotate(-7deg); /* Initial tilt angle */
   -webkit-transform: rotate(-7deg); /* For Safari */
